Revision history for Dancer

{{$NEXT}}

[BUG FIXES]
- Fix test failures since YAML.pm 1.30 (GH #1208)
- More test failures with proxy env var set (GH #1204)

1.3512    2019-03-31 20:10:08+01:00 Europe/London
Promoting previous trial release 1.3511 to stable.

1.3511    2019-03-29 11:16:08+00:00 Europe/London (TRIAL RELEASE)
[BUG FIXES]
 - More session cookie handling fun - avoid causing test failures in dependencies
   in some cases (e.g. RT #128911 and others)

[ENHANCEMENTS]
 - hold session in SharedData, to avoid reading the session contents every time
   anything is requested, could be a performance win

1.3510    2019-03-19 14:42:26+00:00 Europe/London
Promoting previous trial release 1.3501  to stable.
Fix #1204 - more proxy-related test failure fun

1.3501    2019-03-14 19:19:49+00:00 Europe/London (TRIAL RELEASE)
[BUG FIXES]
Fix "too late to set cookie" errors if you access a session within an after hook
after using send_file().

1.3500    2018-10-12 21:31:46+01:00 Europe/London
Promoting previous trial releases to stable.


1.3403    2018-10-11 23:41:11+01:00 Europe/London (TRIAL RELEASE)
[ENHANCEMENTS]
 - request->address now respects behind_proxy - if behind_proxy is set,
   then request->address looks at HTTP_X_FORWARDED_FOR, so you get the
   user's IP, not the proxy. (PR-1199, bigpresh)
 - restore ability to use load_settings_from_yaml() without passing
   YAML parser class (PR-1198, snakpak)
 - Fixing some spurious cpantesters test failures by subclassing HTTP::Tiny
   in our tests and disabling proxying for 127.0.0.1 - otherwise smokers
   with HTTP proxy env vars set fail tests (PR-1197, bigpresh)
- Tidied POD for Tutorial (PR-1196, manwar)
 
1.3402    2018-10-10 11:42:07+01:00 Europe/London (TRIAL RELEASE)

1.3401    2018-10-01 12:49:53+01:00 Europe/London (TRIAL RELEASE)

 [ENHANCEMENTS]
 - Avoid test failures on perls without '.' in @INC
 - censor cookie_key in dumps (PR-1193, thefatphil) 
 - spelling fixes in POD from Debian Perl Group, PR-1191