@@ -140,5 +140,8 @@ put '/setting/:setting_name/:new_value' => sub {
 get '/setting/:setting_name' => sub {
     return setting( params->{setting_name} );
 };
+get '/largepage' => sub {
+    return "large page content\n" x 50;
+};
 
 true;
