@@ -6,6 +6,10 @@ Revision history for Dancer
 - Fix test failures since YAML.pm 1.30 (GH #1208)
 - More test failures with proxy env var set (GH #1204)
 
+[ENHANCEMENTS]
+- Don't show whole web page differences in Dancer::Test's
+    response_content_like() and response_content_unlike()
+
 1.3512    2019-03-31 20:10:08+01:00 Europe/London
 Promoting previous trial release 1.3511 to stable.
 
